Overflows fix

--- a/src/app/modules/widgets/constructor/widget-edit/widget-edit.component.scss
+++ b/src/app/modules/widgets/constructor/widget-edit/widget-edit.component.scss
@@ -81,6 +81,10 @@
   margin-right: 5px !important;
 }
 
+.rename-button {
+  font-size: 14px;
+}
+
 h3.widget-title-main {
   font-size: 25px !important;
   font-weight: 300;
